I worked on exercises 2-8

--- a/04_exercise/css/styles.css
+++ b/04_exercise/css/styles.css
@@ -1,33 +1,38 @@
 /* Text Elements */
 
 h1 {
-  margin-bottom: .75rem;
+  margin-bottom: 0.75rem;
   color: #dae4e9;
-  letter-spacing: -.015em;
+  letter-spacing: -0.015em;
   font-weight: 700;
   font-size: 16vmin;
-  font-family: 'Arimo', cursive;
+  font-family: "Arimo", cursive;
   line-height: 1;
+  overflow: hidden;
 }
 
 aside p {
   text-indent: 0vw;
   font-weight: 700;
-  font-size: .9rem;
-  font-family: 'Arimo', cursive;
+  font-size: 0.9rem;
+  font-family: "Arimo", cursive;
 }
 
 p {
   margin-bottom: 0;
   color: #dae4e9;
   text-indent: 2vw;
-  font-size: .8rem;
-  font-family: 'Lora', cursive;
+  font-size: 0.8rem;
+  font-family: "Lora", cursive;
 }
 
 /* Layout Elements */
+* {
+  overflow-x: hidden;
+}
 
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
 }
@@ -67,6 +72,11 @@ picture {
 
   h1 {
     grid-area: title;
+    font-size: 150px;
+  }
+
+  h1 span {
+    color: rgb(187, 52, 79);
   }
 
   /* Layout Elements */
@@ -75,9 +85,17 @@ picture {
     grid-area: aside;
   }
 
+  aside p {
+    font-size: 23px;
+  }
+
   section {
     padding-left: 0vw;
     grid-area: main;
+  }
+
+  section p {
+    font-size: 15px;
   }
 
   main {
@@ -97,7 +115,7 @@ picture {
 
 @media screen and (min-width: 40rem) {
   @supports (display: grid) {
-      /* Layout Elements */
+    /* Layout Elements */
 
     main {
       padding-top: 2vh;
@@ -111,32 +129,32 @@ picture {
   }
 
   @supports (display: grid) {
-      /* Layout Elements */
+    /* Layout Elements */
 
     main {
       padding-right: 0vw;
       padding-left: 0vw;
 
-      grid-template-areas: '. aside . fig-2 fig-2' 'title title banner banner banner' 'fig-1 main banner banner banner';
-      grid-template-rows: repeat(3 , auto);
-      grid-template-columns: repeat(5 , 1fr);
+      grid-template-areas: ". aside . fig-2 fig-2" "title title banner banner banner" "fig-1 main banner banner banner";
+      grid-template-rows: repeat(3, auto);
+      grid-template-columns: repeat(5, 1fr);
     }
 
     section {
       -webkit-column-width: 12em;
-         -moz-column-width: 12em;
-              column-width: 12em;
+      -moz-column-width: 12em;
+      column-width: 12em;
       -webkit-column-gap: 1.5rem;
-         -moz-column-gap: 1.5rem;
-              column-gap: 1.5rem;
+      -moz-column-gap: 1.5rem;
+      column-gap: 1.5rem;
     }
 
     picture {
-        max-width: 800px;
+      max-width: 800px;
     }
 
     .fig-2 {
-      margin-bottom: .75rem;
+      margin-bottom: 0.75rem;
 
       grid-area: fig-2;
     }
